force-app/main/default/objects/Legal_Entity__c/Legal_Entity__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Loans to Accounts (Legal Entities) as Borrower or Guarantor.</description>
    <label>Legal Entity</label>
    <nameField>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>