force-app/main/default/objects/Legal_Entity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account (legal entity as borrower or guarantor) on the loan.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Entity Roles</relationshipLabel>
    <relationshipName>Account_Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>