force-app/main/default/objects/Legal_Entity__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>Type of legal entity.</description>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>