force-app/main/default/objects/Legal_Entity__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan this legal entity is associated with.</description>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Legal Entities</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>