force-app/main/default/objects/Legal_Entity__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the legal entity on the loan: Borrower or Guarantor.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
                <default>true</default>
                <label>Borrower</label>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>