force-app/main/default/objects/Legal_Entity__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <description>Tax ID for the legal entity.</description>
    <label>Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>